sample-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-virtual-service
spec:
  hosts:
    - "test.wilump.dev"
  gateways:
    - sample-gateway
  http:
    - match:
        - uri:
            prefix: /sample
      route:
        - destination:
            host: sample-service
            port:
              number: 80
